--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,10 @@ img {
     color: var(--Gray-400);
 }
 
+.result-text {
+    padding: 20px;
+}
+
 @media (max-width: 1280px) {
     .main {
         gap: 40px;
